--- a/documento.tex
+++ b/documento.tex
@@ -59,7 +59,7 @@
 \maketitle
 
 \begin{abstract}
-Este documento presenta el desarrollo de un sistema inteligente basado en conocimiento que utiliza reglas lógicas y estrategias de búsqueda heurística para encontrar la mejor ruta entre dos puntos en un sistema de transporte masivo. El sistema implementa algoritmos de búsqueda como A* (A estrella) y BFS (Búsqueda en anchura), junto con una base de conocimiento estructurada mediante reglas lógicas que permiten evaluar y optimizar las rutas considerando factores como tiempo de viaje, costo y número de transbordos.
+Este proyecto fue desarrollado como parte de la materia de Inteligencia Artificial de la carrera de Ingeniería en Ciencia de Datos. El objetivo es crear un sistema que encuentre rutas en un sistema de transporte masivo usando reglas lógicas y algoritmos de búsqueda. Implementamos los algoritmos A* y BFS para comparar sus resultados, y creamos reglas que nos ayudan a determinar qué rutas son mejores según el tiempo, costo y número de transbordos.
 \end{abstract}
 
 \tableofcontents
@@ -67,15 +67,16 @@ Este documento presenta el desarrollo de un sistema inteligente basado en conoci
 
 \section{Introducción}
 
-Los sistemas de transporte masivo en las grandes ciudades requieren de herramientas inteligentes que ayuden a los usuarios a encontrar la mejor ruta entre un punto de origen y un destino. Este proyecto desarrolla un sistema basado en inteligencia artificial que utiliza representación del conocimiento mediante reglas lógicas y algoritmos de búsqueda heurística para resolver este problema.
+Este proyecto forma parte de la materia de Inteligencia Artificial de primeros semestres. El objetivo es aplicar los conceptos aprendidos sobre sistemas basados en conocimiento y algoritmos de búsqueda para resolver un problema práctico: encontrar la mejor ruta en un sistema de transporte masivo.
 
-El sistema implementado permite:
+Para esto, implementamos:
 \begin{itemize}
-    \item Representar el conocimiento del sistema de transporte mediante reglas lógicas
-    \item Encontrar rutas óptimas usando algoritmos de búsqueda heurística
-    \item Evaluar rutas considerando múltiples criterios (tiempo, costo, transbordos)
-    \item Aplicar reglas de inferencia para determinar conexiones y preferencias
+    \item Reglas lógicas que representan cómo funciona el sistema de transporte
+    \item Algoritmos de búsqueda (A* y BFS) para encontrar rutas
+    \item Un sistema que evalúa rutas según tiempo, costo y transbordos
 \end{itemize}
+
+Este proyecto nos permitió entender mejor cómo funcionan los sistemas inteligentes basados en conocimiento y cómo los algoritmos de búsqueda pueden resolver problemas del mundo real.
 
 \section{Marco Teórico}
 
@@ -284,27 +285,28 @@ El algoritmo A* demostró ser eficiente para encontrar rutas óptimas, explorand
 
 \section{Conclusiones}
 
-El sistema desarrollado demuestra la efectividad de combinar representación del conocimiento mediante reglas lógicas con algoritmos de búsqueda heurística para resolver problemas de planificación de rutas en sistemas de transporte masivo.
+A través de este proyecto pudimos aplicar los conceptos aprendidos en la materia de Inteligencia Artificial sobre sistemas basados en conocimiento y algoritmos de búsqueda.
 
-Los principales logros del proyecto incluyen:
+Lo que logramos:
 
 \begin{itemize}
-    \item Implementación exitosa de una base de conocimiento con reglas lógicas
-    \item Desarrollo de algoritmos de búsqueda heurística (A* y BFS)
-    \item Sistema funcional que encuentra rutas óptimas considerando múltiples criterios
-    \item Validación mediante suite completa de pruebas
+    \item Crear una base de conocimiento usando reglas lógicas
+    \item Implementar los algoritmos A* y BFS para buscar rutas
+    \item Desarrollar un sistema que funciona y encuentra rutas entre estaciones
+    \item Probar que el sistema funciona correctamente con diferentes casos
 \end{itemize}
+
+Este proyecto nos ayudó a entender mejor cómo funcionan los sistemas inteligentes y cómo podemos usar algoritmos de búsqueda para resolver problemas prácticos.
 
 \subsection{Trabajo Futuro}
 
-Posibles mejoras y extensiones:
+Si tuviéramos más tiempo, podríamos mejorar el proyecto agregando:
 
 \begin{itemize}
-    \item Incorporar información en tiempo real sobre el estado del transporte
-    \item Implementar aprendizaje automático para ajustar heurísticas
-    \item Agregar más criterios de evaluación (accesibilidad, frecuencia)
-    \item Desarrollar interfaz gráfica de usuario
-    \item Expandir la base de conocimiento con más estaciones y líneas
+    \item Más estaciones y líneas del sistema de transporte
+    \item Una interfaz gráfica para que sea más fácil de usar
+    \item Información en tiempo real sobre el estado del transporte
+    \item Más criterios para evaluar rutas (accesibilidad, frecuencia de buses)
 \end{itemize}
 
 \section{Referencias}
@@ -343,12 +345,12 @@ python pruebas.py
 \subsection{Repositorio Git}
 
 El código fuente está disponible en:\\
-\url{https://github.com/[usuario]/[repositorio]}
+\url{https://github.com/MelissaGilV/ACT_2__IA_IBERO}
 
 \subsection{Video Explicativo}
 
-El video explicativo del proyecto está disponible en:\\
-\url{https://[plataforma]/[enlace-al-video]}
+El video explicativo del proyecto estará disponible en:\\
+[Agregar enlace del video cuando esté listo]
 
 \end{document}
 
